c_bindings/h/hookapi.h

int64_t hook(int64_t reserved) __attribute__((used));
/**
 * Retrieve a nonce for use in an emitted transaction (or another task). Can be called repeatedly for multiple nonces.
 * @param write_ptr A buffer of at least 32 bytes to write into.
 * @param write_len The length of that buffer
 * @return The number of bytes written into the buffer of a negative integer if an error occured.
 */
extern int64_t nonce               (uint32_t write_ptr,  uint32_t write_len);
/**
 * Slot functions have not been implemented yet and the api for them is subject to change
 */

extern int64_t slot                (uint32_t write_ptr, uint32_t write_len, uint32_t slot);
extern int64_t slot_clear          (uint32_t slot);
extern int64_t slot_count          (uint32_t slot);
extern int64_t slot_id             (uint32_t slot);
extern int64_t slot_set            (uint32_t read_ptr,   uint32_t read_len, int32_t  slot);
extern int64_t slot_size           (uint32_t slot);
extern int64_t slot_subarray       (uint32_t parent_slot, uint32_t array_id, uint32_t new_slot);
extern int64_t slot_subfield       (uint32_t parent_slot, uint32_t field_id, uint32_t new_slot);
extern int64_t slot_type           (uint32_t slot, uint32_t flags);
extern int64_t slot_float          (uint32_t slot);
extern int64_t trace_slot          (uint32_t mread_ptr, uint32_t mread_len, uint32_t slot);
extern int64_t otxn_slot           (uint32_t slot);
/**
 * In the hook's state key-value map, set the value for the key pointed at by kread_ptr.
 * @param read_ptr A buffer containing the data to store
 * @param read_len The length of the data
 * @param kread_ptr A buffer containing the key
 * @param kread_len The length of the key
 * @return The number of bytes stored or a negative integer if an error occured
 */
extern int64_t state_set           (uint32_t read_ptr,   uint32_t read_len,
                                    uint32_t kread_ptr,  uint32_t kread_len);
/**
 * Retrieve a value from the hook's key-value map.
 * @param write_ptr A buffer to write the state value into
 * @param write_len The length of that buffer
 * @param kread_ptr A buffer to read the state key from
 * @param kread_len The length of that key
 * @return The number of bytes written or a negative integer if an error occured.
 */
extern int64_t state               (uint32_t write_ptr,  uint32_t write_len,
                                    uint32_t kread_ptr,  uint32_t kread_len);
/**
 * Retrieve a value from another hook's key-value map.
 * @param write_ptr A buffer to write the state value into
 * @param write_len The length of that buffer
 * @param kread_ptr A buffer to read the state key from
 * @param kread_len The length of that key
 * @param aread_ptr A buffer containing an account-id of another account containing a hook whose state we are reading
 * @param aread_len The length of the account-id (should always be 20).
 * @return The number of bytes written or a negative integer if an error occured.
 */
extern int64_t state_foreign       (uint32_t write_ptr,  uint32_t write_len,
                                    uint32_t kread_ptr,  uint32_t kread_len,
                                    uint32_t aread_ptr,  uint32_t aread_len);
/**
 * Print some output to the trace log on xrpld. Any xrpld instance set to "trace" log level will see this.
 * @param read_ptr A buffer containing either data or text (in either utf8, or utf16le)
 * @param read_len The byte length of the data/text to send to the trace log
 * @param as_hex If 0 treat the read_ptr as pointing at a string of text, otherwise treat it as data and print hex
 * @return The number of bytes output or a negative integer if an error occured.
 */
extern int64_t trace               (uint32_t mread_ptr, uint32_t mread_len,
                                    uint32_t dread_ptr, uint32_t dread_len,   uint32_t as_hex);
/**
 * Print some output to the trace log on xrpld along with a decimal number. Any xrpld instance set to "trace" log
 * level will see this.
 * @param read_ptr A pointer to the string to output
 * @param read_len The length of the string to output
 * @param number Any integer you wish to display after the text
 * @return A negative value on error
 */
extern int64_t trace_num           (uint32_t read_ptr,   uint32_t read_len,   int64_t number);
/**
 * Retrieve the burden of the originating transaction (if any)
 * @return The burden of the originating transaction
 */
extern int64_t otxn_burden         (void);
/**
 * Retrieve a field from the originating transaction as "full text" (The way it is displayed in JSON)
 * @param write_ptr A buffer to write the representation into
 * @param write_len The length of the buffer
 * @param field_id The field code of the field being requested
 * @return The number of bytes written to write_ptr or a negative integer if an error occured.
 */
extern int64_t otxn_field_txt      (uint32_t write_ptr,  uint32_t write_len,  uint32_t field_id);
/**
 * Retrieve a field from the originating transaction in its raw serialized form.
 * @param write_ptr A buffer to output the field into
 * @param write_len The length of the buffer.
 * @param field_if The field code of the field being requested
 * @return The number of bytes written to write_ptr or a negative integer if an error occured.
 */
extern int64_t otxn_field          (uint32_t write_ptr,  uint32_t write_len,  uint32_t field_id);
/**
 * Retrieve the generation of the originating transaction (if any).
 * @return the generation of the originating transaction.
 */
extern int64_t otxn_generation     (void);
/**
 * Retrieve the TXNID of the originating transaction.
 * @param write_ptr A buffer at least 32 bytes long
 * @param write_len The length of the buffer.
 * @return The number of bytes written into the buffer or a negative integer on failure.
 */
extern int64_t otxn_id             (uint32_t write_ptr,  uint32_t write_len);
/**
 * Retrieve the Transaction Type (e.g. ttPayment = 0) of the originating transaction.
 * @return The Transaction Type (tt-code)
 */
extern int64_t otxn_type           (void);
extern int64_t  float_set           (int32_t exponent,   int64_t mantissa );
extern int64_t  float_multiply      (int64_t float1,     int64_t float2 );
extern int64_t  float_mulratio      (int64_t float1,     uint32_t round_up,
                                     uint32_t numerator, uint32_t denominator );
extern int64_t  float_negate        (int64_t float1 );
extern int64_t  float_compare       (int64_t float1,     int64_t float2, uint32_t mode );
extern int64_t  float_sum           (int64_t float1,     int64_t float2 );
extern int64_t  float_sto           (uint32_t write_ptr, uint32_t write_len,
                                     uint32_t cread_ptr, uint32_t cread_len,
                                     uint32_t iread_ptr, uint32_t iread_len,
                                     int64_t float1,     uint32_t field_code);
extern int64_t  float_sto_set       (uint32_t read_ptr,  uint32_t read_len );
extern int64_t  float_invert        (int64_t float1 );
extern int64_t  float_divide        (int64_t float1,     int64_t float2 );
extern int64_t  float_one           ();
extern int64_t  float_exponent      (int64_t float1 );
extern int64_t  float_exponent_set  (int64_t float1,     int32_t exponent );
extern int64_t  float_mantissa      (int64_t float1 );
extern int64_t  float_mantissa_set  (int64_t float1,     int64_t mantissa );
extern int64_t  float_sign          (int64_t float1 );
extern int64_t  float_sign_set      (int64_t float1,     uint32_t negative );
extern int64_t  float_int           (int64_t float1,     uint32_t decimal_places, uint32_t abs);
extern int64_t  trace_float         (uint32_t mread_ptr, uint32_t mread_len, int64_t float1);