c_bindings/bindings.rs

extern "C" {
    #[doc = " Retrieve a nonce for use in an emitted transaction (or another task). Can be called repeatedly for multiple nonces."]
    #[doc = " @param write_ptr A buffer of at least 32 bytes to write into."]
    #[doc = " @param write_len The length of that buffer"]
    #[doc = " @return The number of bytes written into the buffer of a negative integer if an error occured."]
    pub fn nonce(write_ptr: u32, write_len: u32) -> i64;
}
extern "C" {
    #[doc = " Slot functions have not been implemented yet and the api for them is subject to change"]
    pub fn slot(write_ptr: u32, write_len: u32, slot: u32) -> i64;
}
extern "C" {
    pub fn slot_clear(slot: u32) -> i64;
}
extern "C" {
    pub fn slot_count(slot: u32) -> i64;
}
extern "C" {
    pub fn slot_id(slot: u32) -> i64;
}
extern "C" {
    pub fn slot_set(read_ptr: u32, read_len: u32, slot: i32) -> i64;
}
extern "C" {
    pub fn slot_size(slot: u32) -> i64;
}
extern "C" {
    pub fn slot_subarray(parent_slot: u32, array_id: u32, new_slot: u32) -> i64;
}
extern "C" {
    pub fn slot_subfield(parent_slot: u32, field_id: u32, new_slot: u32) -> i64;
}
extern "C" {
    pub fn slot_type(slot: u32, flags: u32) -> i64;
}
extern "C" {
    pub fn slot_float(slot: u32) -> i64;
}
extern "C" {
    pub fn trace_slot(mread_ptr: u32, mread_len: u32, slot: u32) -> i64;
}
extern "C" {
    pub fn otxn_slot(slot: u32) -> i64;
}
extern "C" {
    #[doc = " In the hook's state key-value map, set the value for the key pointed at by kread_ptr."]
    #[doc = " @param read_ptr A buffer containing the data to store"]
    #[doc = " @param read_len The length of the data"]
    #[doc = " @param kread_ptr A buffer containing the key"]
    #[doc = " @param kread_len The length of the key"]
    #[doc = " @return The number of bytes stored or a negative integer if an error occured"]
    pub fn state_set(read_ptr: u32, read_len: u32, kread_ptr: u32, kread_len: u32) -> i64;
}
extern "C" {
    #[doc = " Retrieve a value from the hook's key-value map."]
    #[doc = " @param write_ptr A buffer to write the state value into"]
    #[doc = " @param write_len The length of that buffer"]
    #[doc = " @param kread_ptr A buffer to read the state key from"]
    #[doc = " @param kread_len The length of that key"]
    #[doc = " @return The number of bytes written or a negative integer if an error occured."]
    pub fn state(write_ptr: u32, write_len: u32, kread_ptr: u32, kread_len: u32) -> i64;
}
extern "C" {
    #[doc = " Retrieve a value from another hook's key-value map."]
    #[doc = " @param write_ptr A buffer to write the state value into"]
    #[doc = " @param write_len The length of that buffer"]
    #[doc = " @param kread_ptr A buffer to read the state key from"]
    #[doc = " @param kread_len The length of that key"]
    #[doc = " @param aread_ptr A buffer containing an account-id of another account containing a hook whose state we are reading"]
    #[doc = " @param aread_len The length of the account-id (should always be 20)."]
    #[doc = " @return The number of bytes written or a negative integer if an error occured."]
    pub fn state_foreign(
        write_ptr: u32,
        write_len: u32,
        kread_ptr: u32,
        kread_len: u32,
        aread_ptr: u32,
        aread_len: u32,
    ) -> i64;
}
extern "C" {
    #[doc = " Print some output to the trace log on xrpld. Any xrpld instance set to \"trace\" log level will see this."]
    #[doc = " @param read_ptr A buffer containing either data or text (in either utf8, or utf16le)"]
    #[doc = " @param read_len The byte length of the data/text to send to the trace log"]
    #[doc = " @param as_hex If 0 treat the read_ptr as pointing at a string of text, otherwise treat it as data and print hex"]
    #[doc = " @return The number of bytes output or a negative integer if an error occured."]
    pub fn trace(
        mread_ptr: u32,
        mread_len: u32,
        dread_ptr: u32,
        dread_len: u32,
        as_hex: u32,
    ) -> i64;
}
extern "C" {
    #[doc = " Print some output to the trace log on xrpld along with a decimal number. Any xrpld instance set to \"trace\" log"]
    #[doc = " level will see this."]
    #[doc = " @param read_ptr A pointer to the string to output"]
    #[doc = " @param read_len The length of the string to output"]
    #[doc = " @param number Any integer you wish to display after the text"]
    #[doc = " @return A negative value on error"]
    pub fn trace_num(read_ptr: u32, read_len: u32, number: i64) -> i64;
}
extern "C" {
    #[doc = " Retrieve the burden of the originating transaction (if any)"]
    #[doc = " @return The burden of the originating transaction"]
    pub fn otxn_burden() -> i64;
}
extern "C" {
    #[doc = " Retrieve a field from the originating transaction as \"full text\" (The way it is displayed in JSON)"]
    #[doc = " @param write_ptr A buffer to write the representation into"]
    #[doc = " @param write_len The length of the buffer"]
    #[doc = " @param field_id The field code of the field being requested"]
    #[doc = " @return The number of bytes written to write_ptr or a negative integer if an error occured."]
    pub fn otxn_field_txt(write_ptr: u32, write_len: u32, field_id: u32) -> i64;
}
extern "C" {
    #[doc = " Retrieve a field from the originating transaction in its raw serialized form."]
    #[doc = " @param write_ptr A buffer to output the field into"]
    #[doc = " @param write_len The length of the buffer."]
    #[doc = " @param field_if The field code of the field being requested"]
    #[doc = " @return The number of bytes written to write_ptr or a negative integer if an error occured."]
    pub fn otxn_field(write_ptr: u32, write_len: u32, field_id: u32) -> i64;
}
extern "C" {
    #[doc = " Retrieve the generation of the originating transaction (if any)."]
    #[doc = " @return the generation of the originating transaction."]
    pub fn otxn_generation() -> i64;
}
extern "C" {
    #[doc = " Retrieve the TXNID of the originating transaction."]
    #[doc = " @param write_ptr A buffer at least 32 bytes long"]
    #[doc = " @param write_len The length of the buffer."]
    #[doc = " @return The number of bytes written into the buffer or a negative integer on failure."]
    pub fn otxn_id(write_ptr: u32, write_len: u32) -> i64;
}
extern "C" {
    #[doc = " Retrieve the Transaction Type (e.g. ttPayment = 0) of the originating transaction."]
    #[doc = " @return The Transaction Type (tt-code)"]
    pub fn otxn_type() -> i64;
}
extern "C" {
    pub fn float_set(exponent: i32, mantissa: i64) -> i64;
}
extern "C" {
    pub fn float_multiply(float1: i64, float2: i64) -> i64;
}
extern "C" {
    pub fn float_mulratio(float1: i64, round_up: u32, numerator: u32, denominator: u32) -> i64;
}
extern "C" {
    pub fn float_negate(float1: i64) -> i64;
}
extern "C" {
    pub fn float_compare(float1: i64, float2: i64, mode: u32) -> i64;
}
extern "C" {
    pub fn float_sum(float1: i64, float2: i64) -> i64;
}
extern "C" {
    pub fn float_sto(
        write_ptr: u32,
        write_len: u32,
        cread_ptr: u32,
        cread_len: u32,
        iread_ptr: u32,
        iread_len: u32,
        float1: i64,
        field_code: u32,
    ) -> i64;
}
extern "C" {
    pub fn float_sto_set(read_ptr: u32, read_len: u32) -> i64;
}
extern "C" {
    pub fn float_invert(float1: i64) -> i64;
}
extern "C" {
    pub fn float_divide(float1: i64, float2: i64) -> i64;
}
extern "C" {
    pub fn float_one() -> i64;
}
extern "C" {
    pub fn float_exponent(float1: i64) -> i64;
}
extern "C" {
    pub fn float_exponent_set(float1: i64, exponent: i32) -> i64;
}
extern "C" {
    pub fn float_mantissa(float1: i64) -> i64;
}
extern "C" {
    pub fn float_mantissa_set(float1: i64, mantissa: i64) -> i64;
}
extern "C" {
    pub fn float_sign(float1: i64) -> i64;
}
extern "C" {
    pub fn float_sign_set(float1: i64, negative: u32) -> i64;
}
extern "C" {
    pub fn float_int(float1: i64, decimal_places: u32, abs: u32) -> i64;
}
extern "C" {
    pub fn trace_float(mread_ptr: u32, mread_len: u32, float1: i64) -> i64;
}
